# rlog_dynamo

./: Cargo.toml
src/: access.rs  lib.rs  models.rs  record.rs  utils.rs
tests/: log_test.rs
